log
Fri Apr 17 06:48:39 PM UTC 2026: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  1|7
total_score: 0/60
bec9ab1
Fri Apr 17 06:49:42 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|7
total_score: 0/60
f30b188
Fri Apr 17 06:50:55 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:21: error: ‘size’ undeclared (first use in this function)
   83 |         map->size = size--;
      |                     ^~~~
hashmap.c:83:21: note: each undeclared identifier is reported only once for each function it appears in
8368d8f
Fri Apr 17 06:51:13 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:19: error: operation on ‘map->size’ may be undefined [-Werror=sequence-point]
   83 |         map->size = map->size--;
      |         ~~~~~~~~~~^~~~~~~~~~~~~
cc1: all warnings being treated as errors
a787197
Fri Apr 17 06:51:51 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|7
total_score: 0/60
c598c05
Fri Apr 17 06:58:32 PM UTC 2026: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|7
total_score: 0/60
de19619
Fri Apr 17 07:04:46 PM UTC 2026: 
 hashmap.c | 19 +++++++++----------
 1 file changed, 9 insertions(+), 10 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:79:26: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   79 |             map->current = map->buckets[pos];
      |                          ^
hashmap.c:81:23: error: returning ‘Pair **’ from a function with incompatible return type ‘Pair *’ [-Wincompatible-pointer-types]
   81 |             return map->buckets;
      |                    ~~~^~~~~~~~~
ecede18
Fri Apr 17 07:05:16 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:79:26: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   79 |             map->current = map->buckets[pos];
      |                          ^
4bedb6f
Fri Apr 17 07:05:35 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
1a292fc
Fri Apr 17 07:11:56 PM UTC 2026: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘eraseMap’:
hashmap.c:97:28: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   97 |     if(map == NULL) return NULL;
      |                            ^~~~
hashmap.c:96:6: note: declared here
   96 | void eraseMap(HashMap * map,  char * key) {
      |      ^~~~~~~~
e5ea947
Fri Apr 17 07:12:26 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|5
total_score: 20/60
cdc18e3
Fri Apr 17 07:16:52 PM UTC 2026: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  7|5
total_score: 20/60
fe6d092
Fri Apr 17 07:19:59 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fc4dfc5
Fri Apr 17 07:20:20 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|5
total_score: 20/60
b0c9ab0
Fri Apr 17 07:24:05 PM UTC 2026: 
 tests:  7|5
total_score: 20/60
86ae0ad
